<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_to_implicit_views"
        android:layout_margin="15dp"
        android:gravity="center_horizontal"
        tools:layout_editor_absoluteX="117dp"
        tools:layout_editor_absoluteY="113dp"
        />

    <Button
        android:id="@+id/btnCall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:textColor="@color/white"
        android:text="@string/llamar"
        />
    <Button
        android:id="@+id/btnCallFriend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:textColor="@color/white"
        android:text="@string/llamar_amigo"
        />
    <Button
        android:id="@+id/btnOpenWeb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:textColor="@color/white"
        android:text="@string/abrir_web"
        />
    <Button
        android:id="@+id/btnOpenMap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:textColor="@color/white"
        android:text="@string/abrir_mapa"
        />
</LinearLayout>